rename previous index/home reference to event

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -496,7 +496,7 @@ main h2 {
   --nav-desktop-height: 60px;
 }
 
-.home-container h1 span {
+.event-container h1 span {
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 700;
   font-style: italic;
@@ -513,7 +513,7 @@ main h2 {
   background-color: var(--primary-black);
 }
 
-.home-container h1 .title-whistler {
+.event-container h1 .title-whistler {
   padding-left: 1.4rem;
   font-family: 'Climate Crisis', serif;
   font-optical-sizing: auto;
@@ -527,7 +527,7 @@ main h2 {
   line-height: calc(1rem + 3vw);
 }
 
-.home-container .title-festival {
+.event-container .title-festival {
   padding-left: 1.2rem;
   font-family: 'Climate Crisis', serif;
   font-optical-sizing: auto;
@@ -549,7 +549,7 @@ main h2 {
   letter-spacing: 0.3rem;
 }
 
-.home-container h1 span {
+.event-container h1 span {
   display: block;
 }
 
@@ -573,57 +573,57 @@ main h2 {
 
 /****************** EVENTPAGE NAV ******************/
 
-.home-header .nav-bar {
+.event-header .nav-bar {
   background-color: var(--primary-black);
   position: fixed;
   width: 100%;
   padding: 0rem 1.25rem;
 }
 
-.home-header .nav-bar ul li:last-child {
+.event-header .nav-bar ul li:last-child {
   width: 100%;
   margin-bottom: 2rem;
 }
 
-.home-header .logo {
+.event-header .logo {
   height: 60px;
   width: 60px;
   margin: 0.8rem 0;
 }
 
-.home-header h1 {
+.event-header h1 {
   grid-area: logo;
   padding-left: 0px;
   margin-left: 0px;
 }
 
-.home-header p,
-.home-header a {
+.event-header p,
+.event-header a {
   font-family: 'Barlow', sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.home-container h1,
-.home-container h2,
-.home-container h3,
-.home-container h4,
-.home-container h5,
-.home-container p {
+.event-container h1,
+.event-container h2,
+.event-container h3,
+.event-container h4,
+.event-container h5,
+.event-container p {
   margin: 0;
   padding: 0;
 }
 
 /****************** EVENTPAGE header ******************/
 
-.home-header {
+.event-header {
   z-index: 10;
   position: absolute;
   top: 0;
   padding: 0;
 }
 
-.home-header header p {
+.event-header header p {
   grid-area: logo;
   padding-left: 0px;
   margin-left: 0px;
@@ -635,12 +635,12 @@ main h2 {
 
 /****************** EVENTPAGE sections ******************/
 
-.index-section-info {
+.event-section-info {
   background-color: var(--primary-neon-blue);
   border-bottom: 15px solid var(--all-black);
 }
 
-.index-section-about {
+.event-section-about {
   background-color: var(--primary-neon-green);
   display: grid;
   grid-template-columns: 1fr;
@@ -648,13 +648,13 @@ main h2 {
   justify-self: stretch;
 }
 
-.index-section-activities {
+.event-section-activities {
   background-color: var(--primary-black);
   display: grid;
   grid-template-columns: 1fr;
 }
 
-.index-section-team {
+.event-section-team {
   background-color: var(--primary-medium-blue);
   color: var(--primary-white);
 
@@ -664,32 +664,32 @@ main h2 {
   column-gap: 1rem;
 }
 
-.home-container .index-section-about h2 {
+.event-container .event-section-about h2 {
   width: 100%;
   text-align: center;
 }
 
-.home-container .index-section-activities h2 {
+.event-container .event-section-activities h2 {
   text-align: center;
   text-transform: uppercase;
   color: var(--primary-neon-green);
 }
 
-.index-section-activities article img {
+.event-section-activities article img {
   width: 100%;
 }
 
-.index-content > img {
+.event-content > img {
   width: 100%;
 }
-.home-container .index-section-team h2 {
+.event-container .event-section-team h2 {
   width: 100%;
   text-align: center;
   text-transform: uppercase;
   color: white;
 }
 
-.home-container .index-section-team h3 {
+.event-container .event-section-team h3 {
   margin-top: 0.5rem;
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 400;
@@ -698,23 +698,23 @@ main h2 {
   line-height: 1.4rem;
 }
 
-.index-section-info,
-.index-section-about,
-.index-section-activities,
-.index-section-team {
+.event-section-info,
+.event-section-about,
+.event-section-activities,
+.event-section-team {
   padding: 2rem 2rem;
 }
 
-.index-section-info span,
-.index-section-about span {
+.event-section-info span,
+.event-section-about span {
   display: block;
   padding-bottom: 1rem;
 }
 
-.index-section-info h2,
-.index-section-about h2,
-.index-section-activities h2,
-.index-section-team h2 {
+.event-section-info h2,
+.event-section-about h2,
+.event-section-activities h2,
+.event-section-team h2 {
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 700;
   font-size: 3rem;
@@ -723,12 +723,12 @@ main h2 {
   grid-row: 1;
 }
 
-.index-section-info h2,
-.index-section-info p {
+.event-section-info h2,
+.event-section-info p {
   grid-column: span 3;
 }
 
-.index-section-activities h3 {
+.event-section-activities h3 {
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 500;
   font-size: 2rem;
@@ -741,7 +741,7 @@ main h2 {
   height: 1px;
 }
 
-.index-section-info > * {
+.event-section-info > * {
   display: block;
 }
 
@@ -758,15 +758,15 @@ main h2 {
   display: inline-block;
 }
 
-.index-section-info .highlight-outline {
+.event-section-info .highlight-outline {
   color: var(--primary-neon-blue);
 }
 
-.index-section-about .highlight-outline {
+.event-section-about .highlight-outline {
   color: var(--primary-neon-green);
 }
 
-.index-section-info p {
+.event-section-info p {
   font-family: 'Barlow', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -774,7 +774,7 @@ main h2 {
   line-height: 1.4rem;
 }
 
-.index-section-team p {
+.event-section-team p {
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -783,7 +783,7 @@ main h2 {
   margin: 0.5rem 0;
 }
 
-.index-section-team img {
+.event-section-team img {
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -811,7 +811,7 @@ button {
   margin-bottom: 2rem;
 }
 
-.home-container .custom-button {
+.event-container .custom-button {
   display: block;
   padding: 0.5rem 2rem;
   font-weight: 700;
@@ -824,36 +824,36 @@ button {
   color: var(--primary-white);
 }
 
-.index-section-about .custom-button {
+.event-section-about .custom-button {
   background-color: var(--primary-black);
   color: var(--primary-white);
   justify-self: center;
 }
 
-.index-section-activities .custom-button {
+.event-section-activities .custom-button {
   background-color: var(--primary-neon-green);
   color: var(--primary-black);
 }
 
-.index-section-team .custom-button {
+.event-section-team .custom-button {
   background-color: var(--primary-neon-blue);
   justify-self: center;
   color: var(--primary-black);
 }
 
-.index-section-activities > div:first-of-type {
+.event-section-activities > div:first-of-type {
   grid-column: span 1;
   justify-items: center;
   align-content: center;
 }
 
-.index-section-team > div:first-of-type {
+.event-section-team > div:first-of-type {
   display: grid;
   grid-column: 1/4;
   grid-template-columns: 1fr;
 }
 
-.index-section-activities > div:nth-of-type(2) {
+.event-section-activities > div:nth-of-type(2) {
   display: grid;
   grid-column: 1;
   grid-template-columns: subgrid;
@@ -863,29 +863,29 @@ button {
   gap: 2rem;
 }
 
-.index-section-activities article > div {
+.event-section-activities article > div {
   padding-bottom: 1rem;
   border-bottom: 3px solid var(--primary-white);
 }
 
-.index-section-team div:nth-of-type(2) {
+.event-section-team div:nth-of-type(2) {
   display: grid;
 
   grid-column: 1/4;
   grid-template-columns: subgrid;
 }
 
-.index-section-team div:first-of-type h2 {
+.event-section-team div:first-of-type h2 {
   grid-column: span 3;
 }
 
-.index-section-team div:nth-of-type(2) article {
+.event-section-team div:nth-of-type(2) article {
   grid-column: span 1;
 }
 
 /****************** EVENTPAGE ******************/
 
-.home-container .banner {
+.event-container .banner {
   position: absolute;
   height: var(--banner-desktop-height);
   width: 100%;
@@ -894,7 +894,7 @@ button {
   overflow: hidden;
 }
 
-.home-container .banner h1 {
+.event-container .banner h1 {
   position: absolute;
   width: 100%;
   bottom: 0;
@@ -902,7 +902,7 @@ button {
   margin: 0;
 }
 
-.home-container .banner-img {
+.event-container .banner-img {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -912,20 +912,20 @@ button {
   z-index: 1;
 }
 
-.index-content {
+.event-content {
   z-index: 0;
   margin-top: var(--banner-desktop-height);
   background-color: var(--primary-black);
 }
 
-.home-header,
-.home-container,
-.home-footer {
+.event-header,
+.event-container,
+.event-footer {
   width: 100%;
   overflow: hidden;
 }
 
-.home-container {
+.event-container {
   text-align: left;
   padding: 0px;
   z-index: 5;
@@ -939,13 +939,13 @@ button {
   }
 }
 
-.index-content > img:nth-of-type(2) {
+.event-content > img:nth-of-type(2) {
   display: none;
 }
 
 /****************** EVENTPAGE footer ******************/
 
-.home-footer {
+.event-footer {
   padding: 0rem 2rem 2rem 2rem;
   background-color: var(--primary-black);
   display: grid;
@@ -953,34 +953,34 @@ button {
   column-gap: 2rem;
 }
 
-.home-footer p {
+.event-footer p {
   grid-column: span 2;
   width: 100%;
   text-align: left;
   margin: 0.7rem 0rem;
 }
 
-.home-footer .logo {
+.event-footer .logo {
   width: 54px;
   height: 54px;
 }
 
-.home-footer div {
+.event-footer div {
   justify-items: start;
 }
 
-.home-footer div > div {
+.event-footer div > div {
   display: flex;
   gap: 0.8rem;
   margin-bottom: 1rem;
 }
 
-.home-footer > div:nth-of-type(3),
-.home-footer > p {
+.event-footer > div:nth-of-type(3),
+.event-footer > p {
   opacity: 0.5;
 }
 
-.home-footer h5 {
+.event-footer h5 {
   display: inline;
   font-family: 'Barlow Condensed', sans-serif;
   font-weight: 700;
@@ -993,13 +993,13 @@ button {
   align-self: center;
 }
 
-.home-footer h5 span {
+.event-footer h5 span {
   display: block;
   text-align: left;
 }
 
-.home-footer div:nth-of-type(3) a,
-.home-footer p {
+.event-footer div:nth-of-type(3) a,
+.event-footer p {
   text-decoration: none;
   font-family: 'Barlow', sans-serif;
   font-weight: 400;
@@ -1008,11 +1008,11 @@ button {
   align-self: end;
 }
 
-.home-footer div:nth-of-type(2) ul {
+.event-footer div:nth-of-type(2) ul {
   margin: 0;
 }
 
-.home-footer div:nth-of-type(2) a {
+.event-footer div:nth-of-type(2) a {
   text-decoration: none;
   font-family: 'Barlow Condensed', sans-serif;
   text-transform: uppercase;
@@ -1022,17 +1022,17 @@ button {
   color: var(--primary-white);
 }
 
-.home-footer ul {
+.event-footer ul {
   padding-left: 0;
 }
 
-.home-footer ul li {
+.event-footer ul li {
   list-style-type: none;
   text-align: left;
   padding-bottom: 0.5rem;
 }
 
-.home-footer div:nth-of-type(3) {
+.event-footer div:nth-of-type(3) {
   text-align: left;
   grid-column: span 2;
   gap: 1.5rem;
@@ -1040,7 +1040,7 @@ button {
   border-bottom: 1px solid grey;
 }
 
-.home-footer div:nth-of-type(3) a {
+.event-footer div:nth-of-type(3) a {
   margin-right: 2rem;
 }
 
@@ -1059,7 +1059,7 @@ button {
   align-self: flex-end;
 }
 
-.home-footer ul {
+.event-footer ul {
   margin: 0;
 }
 
@@ -1112,16 +1112,16 @@ img.decorative-s-blue {
     grid-column: 1;
     grid-row: 1;
   }
-  .home-header .nav-bar ul li:last-child {
+  .event-header .nav-bar ul li:last-child {
     text-align: center;
     width: 100%;
     margin-bottom: 0rem;
   }
-  .index-content {
+  .event-content {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
   }
-  .index-section-info {
+  .event-section-info {
     display: grid;
     grid-column: 4/8;
     grid-row: 1/3;
@@ -1160,22 +1160,22 @@ img.decorative-s-blue {
         var(--primary-medium-blue);
   }
 
-  .index-content > p:nth-of-type(1) {
+  .event-content > p:nth-of-type(1) {
     grid-column: span 7;
     grid-row: 3;
     margin-top: -7rem;
   }
 
-  .index-content > p:nth-of-type(2) {
+  .event-content > p:nth-of-type(2) {
     grid-column: span 7;
     margin-top: -5rem;
   }
 
-  .index-content > p:nth-of-type(3) {
+  .event-content > p:nth-of-type(3) {
     grid-column: span 7;
   }
 
-  .index-content > img:first-of-type {
+  .event-content > img:first-of-type {
     display: grid;
     grid-template-columns: subgrid;
     grid-row: 1/2;
@@ -1186,7 +1186,7 @@ img.decorative-s-blue {
     border-bottom: 0;
   }
 
-  .index-section-about {
+  .event-section-about {
     margin-top: 2rem;
     grid-column: 1/5;
     grid-row: 4/5;
@@ -1195,16 +1195,16 @@ img.decorative-s-blue {
     z-index: 1;
     align-self: start;
   }
-  .home-container .index-section-about h2 {
+  .event-container .event-section-about h2 {
     text-align: left;
   }
 
-  .home-container .index-section-about .custom-button {
+  .event-container .event-section-about .custom-button {
     align-self: start;
     justify-self: start;
   }
 
-  .index-content > img:nth-of-type(2) {
+  .event-content > img:nth-of-type(2) {
     margin-top: 2rem;
     display: grid;
     grid-template-columns: subgrid;
@@ -1217,74 +1217,74 @@ img.decorative-s-blue {
     width: 100%;
   }
 
-  .index-section-activities {
+  .event-section-activities {
     display: grid;
     grid-column: span 7;
     align-self: center;
   }
 
-  .index-section-activities > div:nth-of-type(1) {
+  .event-section-activities > div:nth-of-type(1) {
     grid-column: span 7;
   }
 
-  .index-section-activities > div:nth-of-type(2) {
+  .event-section-activities > div:nth-of-type(2) {
     display: grid;
     grid-column: span 7;
     grid-template-columns: 1fr 1fr;
     margin: auto;
   }
 
-  .index-section-activities article {
+  .event-section-activities article {
     display: grid;
     grid-column: span 2;
     grid-template-columns: subgrid;
   }
 
-  .index-section-activities article > div {
+  .event-section-activities article > div {
     grid-column: 1/3;
     grid-row: 1/2;
     z-index: 0;
   }
 
-  .index-section-activities article > img {
+  .event-section-activities article > img {
     grid-column: 2;
     grid-row: 1/4;
     z-index: 1;
   }
 
-  .index-section-activities article .tag {
+  .event-section-activities article .tag {
     grid-column: 1/2;
     grid-row: 2/3;
     justify-self: start;
   }
 
-  .index-section-team {
+  .event-section-team {
     grid-column: span 7;
     grid-template-columns: subgrid;
   }
 
-  .index-section-team > div:first-of-type {
+  .event-section-team > div:first-of-type {
     grid-column: span 7;
   }
 
-  .index-section-team > div:nth-of-type(2) {
+  .event-section-team > div:nth-of-type(2) {
     grid-column: span 7;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 1rem;
   }
-  .index-section-team > div:first-child > h2 {
+  .event-section-team > div:first-child > h2 {
     grid-column: 1/2;
     justify-self: start;
     text-align: left;
   }
 
-  .index-section-team > div:first-child > .custom-button {
+  .event-section-team > div:first-child > .custom-button {
     grid-column: 2/3;
     justify-self: center;
     align-self: center;
   }
 
-  .index-content img:nth-of-type(3) {
+  .event-content img:nth-of-type(3) {
     grid-column: span 7;
   }
 
