Minor aesthetic updates

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -492,7 +492,7 @@ main h2 {
   --primary-white: #ffffff;
   --title-stroke-width: 0.2rem;
   --title-stroke-width-neg: -0.2rem;
-  --banner-desktop-height: 600px;
+  --banner-desktop-height: 800px;
   --nav-desktop-height: 60px;
 }
 
@@ -785,7 +785,7 @@ main h2 {
 
 .event-section-team img {
   width: 100%;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -1123,6 +1123,7 @@ img.decorative-s-blue {
   }
   .event-section-info {
     display: grid;
+    grid-template-rows: min-content;
     grid-column: 4/8;
     grid-row: 1/3;
     width: 100%;
