--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
   margin: 0;
-  background-color: #e8f1f5;
+  background-color: #003366;
 }
 
 .wrapper {
@@ -110,6 +110,7 @@ main.index-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #003366;
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.3),
