--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,6 +248,10 @@ footer {
   transition: transform 0.3s; /* Add a hover effect */
 }
 
+#team-member-iryna img {
+  object-position: 50% 85%;
+}
+
 .team img:hover {
   transform: scale(1.05); /* Scale up on hover */
 }
@@ -788,6 +792,10 @@ main h2 {
   width: 100%;
   height: 300px;
   object-fit: cover;
+}
+
+.event-section-team img#iryna {
+  object-position: 50% 85%;
 }
 
 .team-container {
