--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,6 +162,7 @@ main.index-container {
   background-color: rgb(136, 136, 136);
 }
 .eventLink {
+  width: 80px;
   background-color: orangered;
   color: white;
   padding: 10px 15px;
